--- a/react-project/package.json
+++ b/react-project/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "@ant-design/icons": "^5.6.1",
     "antd": "^5.24.1",
+    "chart.js": "^4.4.8",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.2.0"
   },
